2005-05-11  Simon Budig  <simon@gimp.org>

	* app/tools/gimpvectortool.c: reset the vector tool to Design
	mode whenever a new vectors object gets connected to the tool.

	Attempt to fix #300663, please report there if you like / dislike
	the new behaviour.

2005-05-11  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell.c (gimp_display_shell_shrink_wrap):
	return silently instead of warning if the window hasn't been
	realized. This happens as part of the setup process if
	"resize-windows-on-zoom" is selected in the prefs.

2005-05-11  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcontrollerinfo.[ch]: added API to set an event
	snooper which, if set, receives any controller event first, even
	if event dispatching is disabled for the controller.

	* app/widgets/gimpcontrollereditor.[ch]: use the new API to
	implement a "Grab Event" button, which takes the next event from
	the controller and selects it in the event mapping tree view.

2005-05-10  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcontrollerlist.[ch]: some more stuff: up/down
	buttons, remember the dialogs' size and positions, misc stuff.

	* app/widgets/gimpcontrollereditor.c
	(gimp_controller_editor_edit_clicked): use a GimpViewableDialog
	now that GimpControllerInfo is a GimpViewable.

	* app/dialogs/dialogs.c: added a foreign entry for the controller
	editor dialog. Allow the controller editors and its event mapping
	dialogs to exist multiple times.

	* app/dialogs/preferences-dialog.c (prefs_notebook_append_page):
	create the pages' event boxes with input-only windows.

2005-05-09  Helvetix Victorinox  <helvetix@gimp.org>

	* app/composite/gimp-composite-sse2.c: Repaired a latent bug in
	gimp_composite_lighten_rgba8_rgba8_rgba8_sse2 where setting up
	the alpha masks were not done correctly.  A redundant (better?)
	fix to bug #164061

	Use movntq instructions to avoid processor cache pollution.

	Some adjustments to register allocation specifications.
